locale for system page + fill db with default data

--- a/src/Template/cup/system/index-step-1.twig
+++ b/src/Template/cup/system/index-step-1.twig
@@ -1,5 +1,5 @@
 <div class="card-body">
-    <h5 class="text-center">Лицензионное соглашение</h5>
+    <h5 class="text-center">{{ 'Лицензионное соглашение'|locale }}</h5>
 
     <div class="my-3">
         The MIT License<br>
@@ -27,5 +27,5 @@
 </div>
 
 <div class="card-footer d-flex justify-content-center">
-    <a href="/cup/system/2" class="btn btn-primary">Далее</a>
+    <a href="/cup/system/2" class="btn btn-primary">{{ 'Далее'|locale }}</a>
 </div>
