fix lib address

--- a/src/Template/mixin/datatable.twig
+++ b/src/Template/mixin/datatable.twig
@@ -51,8 +51,8 @@
 
         (async () => {
             await window.loader([
-                'https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.19.0/clusterize.min.css',
-                'https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.19.0/clusterize.min.js',
+                '/assets/js/plugin/clusterize/clusterize.min.css',
+                '/assets/js/plugin/clusterize/clusterize.min.js',
             ]);
 
             let $scroll = $('[data-table-scroll="{{ tableId }}"]'),
